--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: java
 
+git:
+  depth: false # Accepts false or any number representing the commit count, defaults to 50
+  autocrlf: input # Prevents git to try to be smart with line endings
+
 os:
     - linux
     - osx
