Use travis_retry

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,4 +37,4 @@ before_install:
   - source $GRAVIS/install-jdk # Install the JDK you configured in the $JDK environment variable
 
 script:
-  - ./gradlew check
+  - travis_retry ./gradlew check
