--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ jobs:
       install:
         - openssl aes-256-cbc -K $encrypted_f778b2e1574b_key -iv $encrypted_f778b2e1574b_iv -in secrets.asc.enc -out secrets.asc -d
       script: # This overrides the default settings
-        - echo Deploy! # Problem: we need to pass credentials...
+        - ./gradlew sign
       workspaces: # Reuse the work done in the initial phase
         use: *linux_workspace
   exclude: # No need to re-run the tests we performed in the first stage
