--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,8 @@ jobs:
         use: *linux_workspace
       install:
         - openssl aes-256-cbc -K $encrypted_f778b2e1574b_key -iv $encrypted_f778b2e1574b_iv -in secrets.asc.enc -out secrets.asc -d
+        - export ORG_GRADLE_PROJECT_signingKey=$(cat secrets.asc)
+        - rm secrets.asc
       script: # This overrides the default settings
         - ./gradlew sign publishPlugins publishMavenCentralPublicationToMavenRepository
       deploy:
