--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,10 @@ jobs:
         - export ORG_GRADLE_PROJECT_signingKey=$(cat secrets.asc)
         - rm secrets.asc
       script: # This overrides the default settings
-        - ./gradlew sign publishPlugins publishMavenCentralPublicationToMavenRepository
+        - ./gradlew sign
+        - publishMavenCentralPublicationToMavenRepository
+      after_success:
+        - ./gradlew publishPlugins -Pgradle.publish.key=GRADLE_PUBLISH_KEY -Pgradle.publish.secret=GRADLE_PUBLISH_SECRET
       deploy:
         provider: releases # Deploys on GitHub Releases
         file: build/libs/*.jar # Files to deploy
