--- a/.travis.yml
+++ b/.travis.yml
@@ -57,8 +57,9 @@ jobs:
         - rm secrets.asc
       script: # This overrides the default settings
         - ./gradlew sign
-        - publishMavenCentralPublicationToMavenRepository
+        - ./gradlew publishMavenCentralPublicationToMavenRepository
       after_success:
+        # Prevents the build from failing due to the plugin being already published
         - ./gradlew publishPlugins -Pgradle.publish.key=GRADLE_PUBLISH_KEY -Pgradle.publish.secret=GRADLE_PUBLISH_SECRET
       deploy:
         provider: releases # Deploys on GitHub Releases
